feat: Unified mov instructions in sir and added 8bit register width to properly support booleans